# HEAN-backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.symbiont  Dockerfile.testnet  LICENSE  README.md  live_testnet_real.py  pyproject.toml  requirements.txt
.claude/agent-memory/hean-alpha-scout/: MEMORY.md
.claude/agent-memory/hean-profit-optimizer/: MEMORY.md  execution-bugs.md
.github/workflows/: ci.yml
cpp_core/: CMakeLists.txt  indicators.cpp  order_router.cpp  physics_engine.cpp  physics_engine_pybind.cpp
examples/: demo_simple.py  demo_simulation.py  full_system_demo.py  generate_agent_example.py  live_testnet_demo.py  live_testnet_real.py  smart_execution_example.py  symbiont_x_example.py
scripts/: auto_fix.sh  benchmark_physics_kernels.py  build_cpp.sh  build_cpp_modules.sh  diagnose_docker.sh  docker-deploy.sh  fix-docker-config.sh  healthcheck.sh  integration_test.sh  k8s-deploy.sh  optimize_os.sh  profile_physics_hotspots.py  promote_model.py  rebuild_all.sh  rebuild_web.sh  run_symbiont_docker.sh  smoke_test.sh  start_all.sh  start_hean_complete.sh  start_real_trading.sh  start_trading.sh  status_hean.sh  stop_hean.sh  test_roundtrip.py  train_oracle.py  train_rl_risk.py  validate_system.sh  verify_fixes.sh  verify_phase2.py
scripts/symbiont_x/: download_historical_data.py  run_backtest.py  test_bybit_connection.py
services/brain/: main.py  requirements.txt
services/collector/: main.py  requirements.txt
services/oracle/: main.py  requirements.txt
services/physics/: Dockerfile  main.py  physics_kernels.py  requirements.txt
services/risk/: Dockerfile  main.py  requirements.txt
src/hean/: __init__.py  absolute_plus.py  config.py  logging.py  main.py  paper_trade_assist.py
src/hean/agent_generation/: capital_optimizer.py  catalyst.py  generator.py  parameter_optimizer.py  prompts.py  report_generator.py
src/hean/ai/: __init__.py  canary.py  factory.py
src/hean/api/: README.md  __init__.py  app.py  auth.py  engine_facade.py  main.py  schemas.py  server.py
src/hean/archon/: README.md  health_matrix.py  signal_pipeline.py
src/hean/backtest/: __init__.py  event_sim.py
src/hean/brain/: README.md  __init__.py  claude_client.py
src/hean/core/: README.md  __init__.py  agent_registry.py  bus.py  context_aggregator.py  contracts.py  density.py  feedback_agent.py  market_context.py  multi_symbol_scanner.py  ofi.py  timeframes.py  types.py
src/hean/core/cpp/: BinaryOrderPlacement.h  CMakeLists.txt  FastWarden.cpp  FeedHandler.cpp  MemoryPool.h  OptimizedWebSocket.h  SIMDJSONParser.h  Scalper.cpp  Sniper.h  TDA_Engine.cpp  TDA_Engine.h  ToxicityDetector.h  TranscendentEntityServer.cpp  TranscendentEntityServer.h  fingerprinter.cpp  metamorphic_engine.h  ofi_monitor.cpp  ofi_monitor.h  transcendent_entity.html
src/hean/council/: README.md  __init__.py  executor.py  introspector.py  prompts.py  review.py
src/hean/evaluation/: __init__.py  readiness.py
src/hean/exchange/: README.md  __init__.py  bybit_tensorized.py  executor.py  models.py  synthetic_feed.py
src/hean/execution/: README.md  __init__.py  adaptive_ttl.py  atomic_executor.py  edge_estimator.py  execution_diagnostics.py  maker_retry_queue.py  order_manager.py  paper_broker.py  position_monitor.py  position_reconciliation.py  router.py  router_bybit_only.py  signal_decay.py  slippage_estimator.py  smart_execution.py
src/hean/funding_arbitrage/: __init__.py  aggregator.py  binance_funding.py  bybit_funding.py  okx_funding.py  strategy.py
src/hean/google_trends/: analyzer.py  models.py  strategy.py
src/hean/hft/: __init__.py  circuit_breaker.py  shared_memory.py
src/hean/income/: streams.py
src/hean/indicators/: fast_indicators.py
src/hean/ml/: __init__.py  feature_extraction.py  signal_quality_scorer.py
src/hean/ml_predictor/: __init__.py  data_loader.py  lstm_model.py  predictor.py  trainer.py
src/hean/observability/: health.py  latency_histogram.py  metrics.py  metrics_exporter.py  money_critical_log.py  phase2_metrics.py  prometheus_server.py
src/hean/physics/: __init__.py  cross_market.py  emotion_arbitrage.py  engine.py  entropy.py  participant_classifier.py  phase_detector.py  szilard.py  temperature.py  temporal_stack.py
src/hean/portfolio/: accounting.py  allocator.py  capital_pressure.py  decision_memory.py  evolution_bridge.py  profit_capture.py  rl_allocator.py
src/hean/process_factory/: engine.py  evaluation.py  leverage_engine.py  process_quality.py  registry.py  report.py  router.py  sandbox.py  scorer.py  selector.py  storage.py  truth_layer.py
src/hean/risk/: __init__.py  anomaly_detector.py  capital_preservation.py  deposit_protector.py  doomsday_sandbox.py  dynamic_risk.py  gym_env.py  kelly_criterion.py  killswitch.py  limits.py  position_sizer.py  price_anomaly_detector.py  (+3 more)
templates/: openai_process_factory_prompt.txt
tests/: __init__.py  conftest.py  stress_test_all.py  test_adaptive_allocator.py  test_adaptive_maker_router.py  test_api.py  test_api_e2e.py  test_api_routers.py  test_app_basics.py  test_backtest.py  test_backtest_execution_metrics.py  test_bybit_connection_simple.py  test_bybit_http.py  test_bybit_websocket.py  test_capital_pressure.py  test_config.py  test_contracts.py  test_decision_memory.py  test_density.py  test_doomsday_sandbox.py  test_dynamic_risk.py  test_edge_confirmation.py  test_edge_estimator.py  test_edge_estimator_ml.py  test_enhanced_ttl.py  test_evaluation.py  test_exchange_basics.py  test_execution_diagnostics.py  test_execution_fixes.py  test_execution_retry_queue.py  test_execution_volatility_gating.py  test_funding_harvester_enhanced.py  test_health_score.py  test_idempotency_resilience.py  test_impulse_filters.py  test_impulse_improvements.py  test_impulse_precision.py  test_intelligence_basics.py  test_kelly_criterion_enhanced.py  test_latency_histogram.py  (+53 more)
tests/symbiont_x/: conftest.py
tests/test_archon/: __init__.py  test_archon_integration.py  test_chronicle.py  test_cortex.py  test_genome_director.py  test_health_matrix.py  test_heartbeat.py  test_reconciler.py  test_signal_pipeline.py
(+136 files in other folders)
