[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hean"
version = "0.1.0"
description = "Production-grade event-driven crypto trading research system for Bybit. Developed with assistance from Claude AI (Anthropic)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HEAN Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "prometheus-client>=0.19.0",
    "numpy>=1.24.0",  # For array handling in graph engine
    "networkx>=3.2.0",  # Graph utilities for causal discovery
    "python-dotenv>=1.0.0",  # Optional .env loading in tools
    "redis>=5.0.0",  # Redis for atomic state sharing
    "python-socketio>=5.10.0",  # Socket.io for WebSocket support
    "grpcio>=1.60.0",  # Phase 19: gRPC for distributed mesh network
    "grpcio-tools>=1.60.0",  # Phase 19: Protobuf compiler for gRPC
    "protobuf>=4.25.0",  # Phase 19: Protocol buffers
    "psutil>=5.9.0",  # Phase 19: System monitoring for heartbeat
    "pyzmq>=25.0.0",  # Absolute+: ZeroMQ for Brain-Body communication
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-aiofiles",
    "httpx>=0.25.0",  # For API tests
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
]
cpp = [
    "pybind11>=2.11.0",  # For C++ Python bindings
]
onnx = [
    "onnxruntime>=1.16.0",  # Optional: ONNX Runtime for model inference
]
viz = [
    "d3>=7.0.0",  # For visualization (installed via npm for web)
]

[tool.setuptools]
packages = ["hean"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "hean.agent_generation.generator",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "graph_engine_py",
    "hean.core.intelligence.graph_engine",
    "hean.core.intelligence.codegen_engine",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src/hean --cov-report=term-missing"
