[project]
name = "hean-workspace"
version = "2.0.0"
description = "HEAN Trading System — uv workspace root"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.13.3",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "orjson>=3.11.7",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
hean-core = { workspace = true }
hean-exchange = { workspace = true }
hean-portfolio = { workspace = true }
hean-risk = { workspace = true }
hean-execution = { workspace = true }
hean-strategies = { workspace = true }
hean-physics = { workspace = true }
hean-intelligence = { workspace = true }
hean-observability = { workspace = true }
hean-symbiont = { workspace = true }
hean-api = { workspace = true }
hean-app = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-aiofiles",
    "httpx>=0.25.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "hean.agent_generation.generator",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "graph_engine_py",
    "hean.core.intelligence.graph_engine",
    "hean.core.intelligence.codegen_engine",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "hean.symbiont_x.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov-report=term-missing"
markers = [
    "bybit: tests that require a live Bybit testnet connection",
]
